src/objects/Account_Plan__c.object
<CustomObject>
    <description>R5 - Account Plan</description>
    <fields>
        <fullName>Master_Account_Plan_Status__c</fullName>
        <formula>TEXT(Sub_Account_Plan_To__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Account Plan Year</description>
        <inlineHelpText>Enter the Account Plan Year</inlineHelpText>
        <label>Account Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Account object</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <description>R5 - Approver Comments</description>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - Business Unit field to concatenate all BU of Financial Target and Expectations.</description>
        <label>BU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budgeted_Opportunities_USD__c</fullName>
        <label>Budgeted Opportunities USD</label>
        <summarizedField>Budget_Opp__c.Opportunity_Value_USD__c</summarizedField>
        <summaryForeignKey>Budget_Opp__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <inlineHelpText>Free Text to add notes</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 - Country field copied from Account Primary Address Country.</description>
        <formula>TEXT(Account__r.Primary_Address_Country__c)</formula>
        <inlineHelpText>Customer Country</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 - Division field to concatenate all the DIV of Financial Target and Expectations.</description>
        <label>DIV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Freeze_Account_Plan_Budgets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Freeze Account Plan Budgets</description>
        <inlineHelpText>&quot;Freeze Account Plan Budgets&quot; check box to activate freezing the Opportunities associated with the Master Account Plan. Once the check box is activated then selected Opportunities cannot be removed/added to the &quot;Budgeted Opportunities&quot;</inlineHelpText>
        <label>Freeze Account Plan Budgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Type__c</fullName>
        <description>R5 - Key Account Type</description>
        <formula>TEXT(Account__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type_Value__c</fullName>
        <description>R5 - To capture Old Record Type Value.</description>
        <label>Old Record Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>PG</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <label>Product Lines</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Planning = &quot;This Account Plan is under Preparation&quot;. Approved = &quot;This Account Plan has been approved by Manager, and is operational&quot;. Closed = &quot;This Account Plan has expired&quot;</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Plan_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Sub Account Plan To (Lookup Field to Account Plan itself)</description>
        <inlineHelpText>Select the Master Account Plan if it exists</inlineHelpText>
        <label>Master Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan-Freeze Budget</value>
            </filterItems>
            <infoMessage>Please use the filters to reduce the number of fields in the lookup window.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Supporting Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Account_Plan_Check__c</fullName>
        <description>R5 - Field used for Duplicate check of  Account Plan.</description>
        <label>Unique Account Plan Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan</fullName>
        <active>true</active>
        <description>Cross Divisional Account Plan created by the Account Team to grow the ABB Share of Wallet at this Particular Account. Only one Master Account Plan per budgeted year.</description>
        <label>Master Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Plan_Closed_Page</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Account Master Plan Closed Page Layout</description>
        <label>Account Master Plan Closed Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Support_Plan</fullName>
        <active>true</active>
        <description>Division/BU/PG/PL detail Plans. It can support the Master Account Plan or be a standalone Plan.</description>
        <label>Sub Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Support_Plan_Closed</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Account Support Plan Closed Page Layout</description>
        <label>Account Support Plan Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freeze_Budget</fullName>
        <active>true</active>
        <description>R5 - Freeze Budget Record Type for Freeze Budget Layout.</description>
        <label>Master Account Plan-Freeze Budget</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>